--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
 	    	font-size: 2em;
 		}
 
-		.landing-header {
+		#page-content {
 			text-align: center;
+		}
+
+		.landing-header {
 			font-size: 3.5em;
 		}
 
@@ -41,7 +44,7 @@
 		.nav li .navTileContent {
 			color: #e1e8f4;	
 			text-align: center;	
-			padding: 12px;	
+			padding: 1%;	
 		} 
 
 		.nav li .navTileContent p {
@@ -66,58 +69,79 @@
 			background-color: #0d336d;
 		}
 
-
-		@media screen and (min-width: 768px) {
-			.landing-header {
-				font-size: 3em;
+		@media screen and (min-width: 667px) {
+			#page-content {
+				font-size: 2em;
 			}
-			.intro-header {
+
+			.navbar-fixed-bottom {
+			    left:0;
+    			bottom:auto;
+    			max-width: 10%;
+    			height:100%;
+			}
+			.navbar .nav li {
+				height: 26%;
+			}
+			.nav li .navTileContent {
+				font-size: .8em;
+				position: relative;
+				top: 50%;
+				transform: translateY(50%);
+			}
+
+			ul {
+				list-style: none;
+			}
+
+			.nav li .navTileContent p {
+				display: block;
 				text-align: center;
-				font-size: 1.5em;
+				padding-left: 0px;
+			}
+		}
+
+		@media screen and (min-width: 1428px) {
+			.nav li .navTileContent {
+				font-size: 1.4em;
+				position: relative;
+				padding-top: 10%;
+				transform: translateY(50%);
 			}
 		}
 
 
 	</style>
 	<body>
+	<div class="container-fluid">
 
-		<div class="container-fluid">
-			<div>
-				<h1 class="landing-header">David Ahn</h1>
-					<div class="intro-header">
-						<h3>I develop websites</h3>
-						<h4>and write music</h4>
-						<h4>and blog</h4>
-						<h5>and stuff</h5>
-					</div>
-			</div>
+		<nav class="navbar navbar-fixed-bottom">
+			<ul class="nav nav-pills nav-stacked">
+				<li class="about"><a href="about.html"><div class="navTileContent"><i class="glyphicon glyphicon-user" aria-hidden="true"></i><p>about</p></div></a></li>
+ 				<li class="portfolio"><a href="portfolio.html"><div class="navTileContent"><i class="glyphicon glyphicon-briefcase" aria-hidden="true"></i><p>portfolio</p></div></a></li>
+				<li class="art"><a href="art.html"><div class="navTileContent"><i class="glyphicon glyphicon-edit" aria-hidden="true"></i><p>art</p></div></a></li>
+				<li class="contact"><a href="contact.html"><div class="navTileContent"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><p>contact</p></div></a></li>
+			</ul>
+		</nav>	
 
-			<nav class="navbar navbar-fixed-bottom">
-				<ul class="nav nav-pills nav-stacked">
-					<li class="about"><a href="about.html"><div class="navTileContent"><i class="glyphicon glyphicon-user" aria-hidden="true"></i><p>about</p></div></a></li>
- 					<li class="portfolio"><a href="portfolio.html"><div class="navTileContent"><i class="glyphicon glyphicon-briefcase" aria-hidden="true"></i><p>portfolio</p></div></a></li>
-					<li class="art"><a href="art.html"><div class="navTileContent"><i class="glyphicon glyphicon-edit" aria-hidden="true"></i><p>art</p></div></a></li>
-					<li class="contact"><a href="contact.html"><div class="navTileContent"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><p>contact</p></div></a></li>
-				</ul>
-			</nav>	
+ 		<div id=page-content>
+			<h1 class="landing-header">David Ahn</h1>
+				<div class="intro-header">
+					<p>I develop websites<p>
+					<p>and write music</p>
+					<p>and blog</p>
+					<p>and stuff</p>
+				</div>
 		</div>
 
+	</div>
 
 
-		</div>
 
 		<script src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-		<script>
-			var navResponsive = function() {
-			    if ($(window).width() > 320) {
-			        $('.navbar').addClass('navbar-fixed-left').removeClass('navbar-fixed-bottom');
-			};
-
-			$(window).on('resize', navResponsive);
-		</script>
 	</body>
 </html>
