--- a/art.html
+++ b/art.html
@@ -9,31 +9,73 @@
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-		<link rel="stylesheet" href="styles.main/css">
+		<link rel="stylesheet" type="text/css" href="css-files/styles.css">
 	</head>
 	<style>
-
 		body {
-			background: salmon;
-	    	font-family: "Geo Sans Light";
-		}	
+			background: #426282;
+			font-family: "Geo Sans Light";	
+			margin: 0;
+			padding: 0;
+		}
+		#art-content{
+			margin-top: 2em;
+			margin-left: auto;
+		    margin-right: auto;
+			max-width: 300px;
+			color: #fff;
+
+		}
+		.art-header {
+			text-align: center;
+		}
+
+		#tf-pic {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 100%;			
+		}
+
+		.tf-header {
+			text-align: center;
+		}
+
+		@media screen and (min-width: 667px) {
+			#art-content {
+				position: relative;
+				margin: 2em auto 6em;
+				left: 100px;
+				max-width: 625px;
+				font-size: 1.5em;
+			}
+		}
 
 	</style>
 	<body>
-		<div class="container-fluid">
 
-
+		<div id="art-content">
+			<h1 class="art-header">Stuff I Wrote/Recorded/Etc</h1>
+			<div id="tf-content">
+				<a href="https://toyforest.bandcamp.com/"><img id="tf-pic" src="images/toy-forest-pic.png" alt="Picture of the band Toy Forest"></a>
+				<section class="tf-section">
+					<h2 class="tf-header">Toy Forest</h2>
+					<p class="tf-info">Toy Forest is my band. The songs I write are about life and stuff.</p>
+					<a href="https://toyforest.bandcamp.com/"><p>https://toyforest.bandcamp.com</p></a>
+				</section>
+			</div>
 		</div>
+		<nav>
+			<ul>
+				<li class="home"><a href="index.html"><div class="navTile"><img class="navIcon active" src="images/home-icon-inactive.png"><p>Home</p></div></a></li>
+				<li class="about"><a href="about.html"><div class="navTile"><img class="navIcon active" src="images/about-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/about-icon-inactive.png" style="display: inline;"><p>About</p></div></a></li>
+				<li class="portfolio"><a href="portfolio.html"><div class="navTile"><img class="navIcon inactive" src="images/portfolio-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/portfolio-icon-inactive.png" style="display: inline;"><p>Portfolio</p></div></a></li>
+				<li class="art selected"><a href="art.html"><div class="navTile"><img class="navIcon active" src="images/art-icon-active.png" style="display: inline;"><img class="navIcon inactive" src="images/art-icon-inactive.png" style="display: none;"><p>Art</p></div></a></li>
+				<li class="contact"><a href="contact.html"><div class="navTile"><img class="navIcon active" src="images/contact-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/contact-icon-inactive.png" style="display: inline;"><p>Contact</p></div></a></li>
+			</ul>
+		</nav>
+
 
 		<script src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
-
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	</body>
 </html>
