--- a/contact.html
+++ b/contact.html
@@ -9,33 +9,82 @@
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-		<link rel="stylesheet" href="styles.main/css">
+		<link rel="stylesheet" type="text/css" href="css-files/styles.css">
 	</head>
 	<style>
-
 		body {
-			background: salmon;
-	    	font-family: "Geo Sans Light";
-		}	
+			background: #284765;
+			font-family: "Geo Sans Light";	
+			margin: 0;
+			padding: 0;
+		}
+		#contact-content{
+			margin-top: 2em;
+			margin-left: auto;
+		    margin-right: auto;
+			max-width: 300px;
+			color: #fff;
 
+		}
+		.contact-header{
+			text-align: center;
+		}
+
+		.contact-text {
+			text-align: center;
+		}
+		.contact-ul {
+			text-align: center;
+		}
+		.contact-ul li{
+			list-style: none;
+			display: inline;
+		}
+		.contact-ul a li img {
+			height: 24px;
+			color: #fff;
+			margin-right: 2em;
+		}
+
+		@media screen and (min-width: 667px) {		
+			#contact-content {
+				position: relative;
+				margin: 2em auto 6em;
+				left: 100px;
+				max-width: 625px;
+				font-size: 1.5em;
+			}
+			.contact-ul a li img {
+				height: 30px;
+				color: #fff;
+				margin-right: 2em;
+			}
+		}
 	</style>
 	<body>
-		<div class="container-fluid">
-
-
-
-
+		<div id="contact-content">
+			<h1 class="contact-header">Contact</h1>
+			<p class="contact-text">Feel free to get in touch with me!</p>
+			<ul class="contact-ul">
+				<a href="mailto:davidchoi1987@gmail.com"><li><img src="images/emailwhite.png"></li></a>
+				<a href="https://twitter.com/judofox"><li><img src="images/twitterwhite.png"></li></a>
+				<a href="https://www.linkedin.com/"><li><img src="images/linkedinwhite.png"></li></a>
+				<a href="https://github.com/judopower"><li><img src="images/githubwhite.png"></li></a>
+			</ul>
 		</div>
+
+		<nav>
+			<ul>
+				<li class="home"><a href="index.html"><div class="navTile"><img class="navIcon active" src="images/home-icon-inactive.png"><p>Home</p></div></a></li>
+				<li class="about"><a href="about.html"><div class="navTile"><img class="navIcon active" src="images/about-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/about-icon-inactive.png" style="display: inline;"><p>About</p></div></a></li>
+				<li class="portfolio"><a href="portfolio.html"><div class="navTile"><img class="navIcon inactive" src="images/portfolio-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/portfolio-icon-inactive.png" style="display: inline;"><p>Portfolio</p></div></a></li>
+				<li class="art"><a href="art.html"><div class="navTile"><img class="navIcon active" src="images/art-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/art-icon-inactive.png" style="display: inline;"><p>Art</p></div></a></li>
+				<li class="contact selected"><a href="contact.html"><div class="navTile"><img class="navIcon active" src="images/contact-icon-active.png" style="display: inline;"><img class="navIcon inactive" src="images/contact-icon-inactive.png" style="display: none;"><p>Contact</p></div></a></li>
+			</ul>
+		</nav>
+
 
 		<script src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	</body>
 </html>
