--- a/index.html
+++ b/index.html
@@ -9,139 +9,69 @@
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-		<link rel="stylesheet" href="styles.main/css">
+		<link rel="stylesheet" type="text/css" href="css-files/styles.css">
 	</head>
 	<style>
-
 		body {
-			background-color: #fa8072;
-	    	font-family: "Geo Sans Light";
-	    	font-size: 2em;
-		}
-
-		#page-content {
-			text-align: center;
-		}
-
-		.landing-header {
-			font-size: 3.5em;
-		}
-
-		.intro-header  {
-			padding: 5%;
-		}
-
-		.nav li {
-			margin: -5px;
-		}
-
-		.nav li .navTileContent {
-			color: #e1e8f4;	
-			text-align: center;	
-			padding: 1%;	
-		} 
-
-		.nav li .navTileContent p {
-			padding-left: 20px;
-			display: inline;
-		}
-
-		.about {
-			background-color: #6ad8d1;
-		}
-
-		.portfolio {
-			background-color: #12d132;
-
-		}
-
-		.art {
-			background-color: #12466b;
-		}
-
-		.contact {
-			background-color: #0d336d;
-		}
-
-		@media screen and (min-width: 667px) {
-			#page-content {
-				font-size: 2em;
+			background: #6799cc;
+			font-family: "Geo Sans Light";
+			margin: 0;
+			padding: 0;
 			}
-
-			.navbar-fixed-bottom {
-			    left:0;
-    			bottom:auto;
-    			max-width: 10%;
-    			height:100%;
+			#home-content{
+				margin-top: 2em;
+				margin-left: auto;
+			    margin-right: auto;
+				max-width: 400px;
+				color: #fff;
 			}
-			.navbar .nav li {
-				height: 26%;
-			}
-			.nav li .navTileContent {
-				font-size: .8em;
-				position: relative;
-				top: 50%;
-				transform: translateY(50%);
-			}
-
-			ul {
-				list-style: none;
-			}
-
-			.nav li .navTileContent p {
-				display: block;
+			.home-header {
+				font-size: 4em;
 				text-align: center;
-				padding-left: 0px;
 			}
-		}
-
+			.home-header-two {
+				font-size: 3em;
+				text-align: center;
+			}
+		@media screen and (min-width: 667px) {
+			#home-content {
+				margin-top: 3em;
+			}
+			.home-header {
+				font-size: 5em;
+			}
+			.home-header-two {
+				font-size: 3.5em;
+			}
 		@media screen and (min-width: 1428px) {
-			.nav li .navTileContent {
-				font-size: 1.4em;
-				position: relative;
-				padding-top: 10%;
-				transform: translateY(50%);
+			#home-content {
+				margin-top: 4em;
+			}
+			.home-header {
+				font-size: 7em;
+			}
+			.home-header-two {
+				font-size: 5em;
 			}
 		}
-
 
 	</style>
 	<body>
-	<div class="container-fluid">
-
-		<nav class="navbar navbar-fixed-bottom">
-			<ul class="nav nav-pills nav-stacked">
-				<li class="about"><a href="about.html"><div class="navTileContent"><i class="glyphicon glyphicon-user" aria-hidden="true"></i><p>about</p></div></a></li>
- 				<li class="portfolio"><a href="portfolio.html"><div class="navTileContent"><i class="glyphicon glyphicon-briefcase" aria-hidden="true"></i><p>portfolio</p></div></a></li>
-				<li class="art"><a href="art.html"><div class="navTileContent"><i class="glyphicon glyphicon-edit" aria-hidden="true"></i><p>art</p></div></a></li>
-				<li class="contact"><a href="contact.html"><div class="navTileContent"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><p>contact</p></div></a></li>
-			</ul>
-		</nav>	
-
- 		<div id=page-content>
-			<h1 class="landing-header">David Ahn</h1>
-				<div class="intro-header">
-					<p>I develop websites<p>
-					<p>and write music</p>
-					<p>and blog</p>
-					<p>and stuff</p>
-				</div>
+		<div id="home-content">
+			<h1 class="home-header">David Choi</h1>
+			<h2 class="home-header-two"><u>I do art and tech stuff</u></h2>
 		</div>
-
-	</div>
-
-
+		
+		<nav>
+			<ul>
+				<li class="home selected"><a href="index.html"><div class="navTile"><img class="navIcon active" src="images/home-icon-active.png"><p>Home</p></div></a></li>
+				<li class="about"><a href="about.html"><div class="navTile"><img class="navIcon active" src="images/about-icon-active.png" style="display: inline;"><img class="navIcon inactive" src="images/about-icon-inactive.png" style="display: none;"><p>About</p></div></a></li>
+				<li class="portfolio"><a href="portfolio.html"><div class="navTile"><img class="navIcon inactive" src="images/portfolio-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/portfolio-icon-inactive.png" style="display: inline;"><p>Portfolio</p></div></a></li>
+				<li class="art"><a href="art.html"><div class="navTile"><img class="navIcon active" src="images/art-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/art-icon-inactive.png" style="display: inline;"><p>Art</p></div></a></li>
+				<li class="contact"><a href="contact.html"><div class="navTile"><img class="navIcon active" src="images/contact-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/contact-icon-inactive.png" style="display: inline;"><p>Contact</p></div></a></li>
+			</ul>
+		</nav>
 
 		<script src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
-
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 	</body>
 </html>
