--- a/art.html
+++ b/art.html
@@ -8,13 +8,13 @@
 
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css-files/styles.css">
 	</head>
 	<style>
 		body {
 			background: #426282;
-			font-family: "Geo Sans Light";	
+			font-family: "Arial";	
 			margin: 0;
 			padding: 0;
 		}
@@ -24,11 +24,11 @@
 		    margin-right: auto;
 			max-width: 300px;
 			color: #fff;
-
+			font-family: 'Josefin Sans', sans-serif;
 		}
 		.art-header {
 			text-align: center;
-		}
+}
 
 		#tf-pic {
 			display: block;
