--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,13 @@
 
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css-files/styles.css">
 	</head>
 	<style>
 		body {
 			background: #284765;
-			font-family: "Geo Sans Light";	
+			font-family: "Arial";	
 			margin: 0;
 			padding: 0;
 		}
@@ -24,7 +24,7 @@
 		    margin-right: auto;
 			max-width: 300px;
 			color: #fff;
-
+			font-family: 'Josefin Sans', sans-serif;
 		}
 		.contact-header{
 			text-align: center;
@@ -68,7 +68,7 @@
 			<ul class="contact-ul">
 				<a href="mailto:davidchoi1987@gmail.com"><li><img src="images/emailwhite.png"></li></a>
 				<a href="https://twitter.com/judofox"><li><img src="images/twitterwhite.png"></li></a>
-				<a href="https://www.linkedin.com/"><li><img src="images/linkedinwhite.png"></li></a>
+				<a href="https://www.linkedin.com/in/david-choi-759330119"><li><img src="images/linkedinwhite.png"></li></a>
 				<a href="https://github.com/judopower"><li><img src="images/githubwhite.png"></li></a>
 			</ul>
 		</div>
