--- a/about.html
+++ b/about.html
@@ -8,13 +8,12 @@
 
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css-files/styles.css">
 	</head>
 	<style>
 		body {
 			background: #6799cc;
-			font-family: "Geo Sans Light";
 			margin: 0;
 			padding: 0;
 		}
@@ -25,8 +24,9 @@
 		    margin-bottom: 5em;
 			max-width: 300px;
 			color: #fff;
+			font-family: 'Josefin Sans', sans-serif;
 		}
-
+		
 		#about-pic {
 			display: block;
 			margin-left: auto;
@@ -37,8 +37,16 @@
 			text-align: center;
 		}
 
-		.download-button {
+		.buttons {
 			text-align: center;
+			margin-bottom: 1em;
+		}
+
+		.buttons button {
+			background: rgba(0, 0, 0, 0);
+			padding: 1em 2em 1em 2em;
+			font-size: 0.75em;
+			font-family: 'Josefin Sans', sans-serif;
 		}
 
 		@media screen and (min-width: 667px) {
@@ -69,7 +77,7 @@
 		<div id="about-content">
 			<img id="about-pic" src="images/about-profile-pic.jpg">
 			<h1 class="about-header">About</h1>
-			<div class="download-button"><a href=" ">Download Resume Button Goes Here</a></div>
+			<a class="buttons" href="resume/David_Choi_ Resume_2016.pdf"><button>Download Résumé</button></a>
 			<div class="about-text">
 				<p>Hey there, folks. My name is David Choi. I play music, train MMA, write political opinions, and develop web stuff.</p>
 				<section class="cleared-about-text"><p>I enjoy acquiring new skills and knowledge and growing as a person.</p>
