--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 		<!-- Font Awesome -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css-files/styles.css">
 	</head>
 	<style>
 		body {
 			background: #6799cc;
-			font-family: "Geo Sans Light";
+			font-family: "Arial";
 			margin: 0;
 			padding: 0;
 			}
@@ -24,6 +24,7 @@
 			    margin-right: auto;
 				max-width: 400px;
 				color: #fff;
+				font-family: 'Josefin Sans', sans-serif;
 			}
 			.home-header {
 				font-size: 4em;
@@ -48,7 +49,7 @@
 				margin-top: 4em;
 			}
 			.home-header {
-				font-size: 7em;
+				font-size: 6em;
 			}
 			.home-header-two {
 				font-size: 5em;
@@ -65,7 +66,7 @@
 		<nav>
 			<ul>
 				<li class="home selected"><a href="index.html"><div class="navTile"><img class="navIcon active" src="images/home-icon-active.png"><p>Home</p></div></a></li>
-				<li class="about"><a href="about.html"><div class="navTile"><img class="navIcon active" src="images/about-icon-active.png" style="display: inline;"><img class="navIcon inactive" src="images/about-icon-inactive.png" style="display: none;"><p>About</p></div></a></li>
+				<li class="about"><a href="about.html"><div class="navTile"><img class="navIcon active" src="images/about-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/about-icon-inactive.png" style="display: inline;"><p>About</p></div></a></li>
 				<li class="portfolio"><a href="portfolio.html"><div class="navTile"><img class="navIcon inactive" src="images/portfolio-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/portfolio-icon-inactive.png" style="display: inline;"><p>Portfolio</p></div></a></li>
 				<li class="art"><a href="art.html"><div class="navTile"><img class="navIcon active" src="images/art-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/art-icon-inactive.png" style="display: inline;"><p>Art</p></div></a></li>
 				<li class="contact"><a href="contact.html"><div class="navTile"><img class="navIcon active" src="images/contact-icon-active.png" style="display: none;"><img class="navIcon inactive" src="images/contact-icon-inactive.png" style="display: inline;"><p>Contact</p></div></a></li>
