--- a/about.html
+++ b/about.html
@@ -38,8 +38,11 @@
 		}
 
 		.buttons {
+			display: block;
 			text-align: center;
-			margin-bottom: 1em;
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: 1.8em;
 		}
 
 		.buttons button {
@@ -47,6 +50,7 @@
 			padding: 1em 2em 1em 2em;
 			font-size: 0.75em;
 			font-family: 'Josefin Sans', sans-serif;
+			border: 1px solid black;
 		}
 
 		@media screen and (min-width: 667px) {
@@ -64,8 +68,7 @@
 			.about-header {
 				text-align: left;
 			}
-			.download-button {
-				margin: 60px auto 60px;
+			.buttons {
 				text-align: left;
 			}
 			.cleared-about-text{
