updated art and contact pages
art now has aa blog and contact temporarily took out email button and
opted to just list email until page is live on own server

--- a/art.html
+++ b/art.html
@@ -22,13 +22,20 @@
 			margin-top: 2em;
 			margin-left: auto;
 		    margin-right: auto;
+			margin-bottom: 5em;		    
 			max-width: 300px;
 			color: #fff;
 			font-family: 'Josefin Sans', sans-serif;
 		}
 		.art-header {
 			text-align: center;
-}
+		}
+		#aa-blog-pic {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 75%;
+		}
 
 		#tf-pic {
 			display: block;
@@ -37,9 +44,6 @@
 			width: 100%;			
 		}
 
-		.tf-header {
-			text-align: center;
-		}
 
 		@media screen and (min-width: 667px) {
 			#art-content {
@@ -56,11 +60,19 @@
 
 		<div id="art-content">
 			<h1 class="art-header">Stuff I Wrote/Recorded/Etc</h1>
+			<div id="aa-blog-content">
+				<a href="https://altaicanger.wordpress.com/"><img id="aa-blog-pic" src="images/best-friends.jpg" alt="Picture of the blog Altaic Anger"></a>
+				<section class="aa-blog-section">
+					<h2 class="art-header">My blog</h2>
+					<p class="art-p-info">It consists mostly of personal observations of society and politics that are too pompous to be shared regularly Facebook</p>
+					<a href="https://altaicanger.wordpress.com/"><p>https://altaicanger.wordpress.com/</p></a>
+				</section>
+			</div>
 			<div id="tf-content">
-				<a href="https://toyforest.bandcamp.com/"><img id="tf-pic" src="images/toy-forest-pic.png" alt="Picture of the band Toy Forest"></a>
+				<a href="https://toyforest.bandcamp.com/"><img id="tf-pic" src="images/f-on-stage.jpg" alt="Picture of the band Toy Forest"></a>
 				<section class="tf-section">
-					<h2 class="tf-header">Toy Forest</h2>
-					<p class="tf-info">Toy Forest is my band. The songs I write are about life and stuff.</p>
+					<h2 class="art-header">Toy Forest</h2>
+					<p class="art-p-info">Toy Forest is my band. The songs I write are about life and stuff.</p>
 					<a href="https://toyforest.bandcamp.com/"><p>https://toyforest.bandcamp.com</p></a>
 				</section>
 			</div>
