--- a/contact.html
+++ b/contact.html
@@ -66,11 +66,13 @@
 			<h1 class="contact-header">Contact</h1>
 			<p class="contact-text">Feel free to get in touch with me!</p>
 			<ul class="contact-ul">
-				<a href="mailto:davidchoi1987@gmail.com"><li><img src="images/emailwhite.png"></li></a>
+				<span style="display: none"><a href="mailto:davidchoi1987@gmail.com"><li><img src="images/emailwhite.png"></li></a></span>
 				<a href="https://twitter.com/judofox"><li><img src="images/twitterwhite.png"></li></a>
 				<a href="https://www.linkedin.com/in/david-choi-759330119"><li><img src="images/linkedinwhite.png"></li></a>
 				<a href="https://github.com/judopower"><li><img src="images/githubwhite.png"></li></a>
 			</ul>
+			<br>
+			<span style="text-align: center"><h4>Email: davidchoi1987 at gmail dot com</h4></span>
 		</div>
 
 		<nav>
