Updated Portfolio Page with Codi
Added completed project for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,26 @@
 			text-align: center;
 		}
 
+		#codi-pic {
+			width: 100%;
+		}
+
+		.buttons {
+			display: block;
+			text-align: center;
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: 1.8em;
+		}
+
+		.buttons button {
+			background: rgba(0, 0, 0, 0);
+			padding: 1em 2em 1em 2em;
+			font-size: 0.75em;
+			font-family: 'Josefin Sans', sans-serif;
+			border: 1px solid black;
+		}
+
 		@media screen and (min-width: 667px) {		
 			#portfolio-content {
 				position: relative;
@@ -44,7 +64,10 @@
 
 		<div id="portfolio-content">
 			<h1 class="portfolio-header">Portfolio</h1>
-			<p class="portfolio-text"> Real Talk: I haven't made anything worth showing off yet other than my personal website cause I'm just getting started learning web development. I do know a bunch of stuff, though! And I'm currently finishing up a project or two. Stay tuned to see them posted up here later.</p>
+			<a href="http://www.codincodi.com/"><img id="codi-pic" src="images/codi-homepage.png" alt="Homepage of Codi N Codi Inc"></a>
+			<h1 class="portfolio-header">Codi N Codi Inc.</h1>
+			<p class="portfolio-text">This was the first website I worked on. Codi N Codi is a local cosmetics brand that needed a simple digital presence that showcased their products and displayed their contact information. I used WordPress to build the site, shot and edited the images, and taught the client how to use the WordPress content management system.</p>
+			<a class="buttons" href="http://www.codincodi.com/"><button>View Project</button></a>
 		</div>
 		<nav>
 			<ul>
