Updated About and Contact pages
minor changes. took out a <p> and changed email text.

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 				<a href="https://github.com/judopower"><li><img src="images/githubwhite.png"></li></a>
 			</ul>
 			<br>
-			<span style="text-align: center"><h4>Email: davidchoi1987 at gmail dot com</h4></span>
+			<span style="text-align: center"><h4>Email: davidchoi1987@gmail.com</h4></span>
 		</div>
 
 		<nav>
